Making sure help is wired to RBC dialog correctly

--- a/PatchMaker.App/PatchMaker.App.Help.html
+++ b/PatchMaker.App/PatchMaker.App.Help.html
@@ -108,7 +108,7 @@
         </li>
     </ul>
 
-    <h2>Rule based config</h2>
+    <h2><a name="rbc">Rule based config</a></h2>
 
     <p>
         If you're working with Sitecore v9+ and you need to add rules like <code>role:requires</code> attributes, then you can make use of the "Rules"
